# forge

./: .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  PRD.md  README.md  SPEC.md  stack.md
.github/workflows/: ci.yml  release-desktop.yml
apps/desktop/: package-lock.json  package.json  tauri.conf.json
apps/desktop/cli-resources/: README.txt  install-cli.ps1  uninstall-cli.ps1
apps/desktop/scripts/: package-portable.mjs  stage-sidecar.mjs  verify-version-sync.mjs
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/windows/: installer-hooks.nsh
apps/forge/: Cargo.toml
apps/forge/src/: main.rs
apps/forged/: Cargo.toml
apps/forged/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: mutation_routes.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/persistence-sqlite/: Cargo.toml
crates/persistence-sqlite/migrations/: 0001_initial.sql  0002_events_project_nullable.sql  0003_projects_workdir_path.sql
crates/persistence-sqlite/src/: lib.rs
docs/: installing.md  releasing.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: color-picker.tsx  recurrence-builder.tsx  schedule-widget.tsx
frontend/src/components/app/: dialogs.tsx  screens.tsx  shared-ui.tsx  state.ts
frontend/src/components/ui/: alert-dialog.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  loading-surface.tsx  status-callout.tsx  toast.tsx  toaster.tsx  use-toast.ts
frontend/src/lib/: event-validation.test.ts  event-validation.ts  keyboard.test.ts  keyboard.ts  motion.ts  query.test.ts  query.ts  recurrence.test.ts  recurrence.ts  task-board.test.ts  task-board.ts
skills/forge-operator/: SKILL.md
skills/forge-operator/agents/: openai.yaml
skills/forge-operator/references/: behavior.md  cli.md  paths.md
