[workspace]
members = [
    "crates/domain",
    "crates/app",
    "crates/persistence-sqlite",
    "crates/api",
    "apps/forged",
    "apps/forge",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
dirs = "6.0.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rrule = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tauri = { version = "2.8.5" }
tauri-build = { version = "2.2.0" }
tempfile = "3.23.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"
