[package]
name = "forge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
domain = { path = "../../crates/domain" }
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
tokio.workspace = true
urlencoding.workspace = true

[dev-dependencies]
api = { path = "../../crates/api" }
app = { path = "../../crates/app" }
axum.workspace = true
persistence-sqlite = { path = "../../crates/persistence-sqlite" }
tempfile.workspace = true
