[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app = { path = "../app" }
axum.workspace = true
chrono.workspace = true
domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
persistence-sqlite = { path = "../persistence-sqlite" }
tempfile.workspace = true
tower = { version = "0.5.2", features = ["util"] }
urlencoding.workspace = true
