[package]
name = "forge-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
domain = { path = "../../../crates/domain" }
reqwest.workspace = true
tauri.workspace = true
tauri-plugin-dialog = "2.3.1"
tauri-plugin-shell = "2.3.1"
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
tauri-build.workspace = true
